--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@babel/preset-env": "^7.11.5",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.0.4",
+    "css-loader": "^4.3.0",
     "eslint": "^7.9.0",
     "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-standard": "14.1.1",
@@ -37,6 +38,10 @@
     "eslint-watch": "^7.0.0",
     "jest": "^26.4.2",
     "npm-run-all": "^4.0.2",
+    "raw-loader": "^4.0.1",
+    "sass": "^1.26.10",
+    "sass-loader": "^10.0.2",
+    "style-loader": "^1.2.1",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10"
@@ -44,6 +49,10 @@
   "dependencies": {
     "@babel/runtime": "^7.11.2",
     "babel-eslint": "^10.1.0",
-    "d3": "4.13.0"
+    "css-light-grid": "^1.1.3",
+    "d3-array": "^2.7.1",
+    "d3-scale": "^3.2.2",
+    "d3-selection": "^2.0.0",
+    "d3-shape": "^2.0.0"
   }
 }
