--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.11.2",
+    "axios": "^0.20.0",
     "babel-eslint": "^10.1.0",
     "css-light-grid": "^1.1.3",
     "d3-array": "^2.7.1",
