--- a/.eslintrc
+++ b/.eslintrc
@@ -12,10 +12,17 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
+    "settings": {
+      "import/resolver": {
+        "webpack": {
+          "extensions": [".js", ".jsx", ".ts", ".tsx"]
+        }
+      }
+    },
     "rules": {
       "sort-imports": 0,
       "import/extensions": [
-        "error",
+        "off",
         "always",
         {
           "js": "never",
